3.3-015
        * Fix error in griprint.cc - buffer overflow for printing spectra with
          numbers above 99.  Thanks to Dave Caussyn at FSU for finding this one.
        * Fix redef errors in NSCLAsciiFormatter..

3.4
        * Provide support code for NSCLDAQ-11/10 ring item decoding.
        * Issue # 1713, Issue# 1712 Support ringformat specification in
          all data source dialogs.  In addtion add the format selection
          to the bottom of data source prompters that did not originally
          have them.
        * Issue #1659 Provide mechanisms for ring buffer analyzers
          to fish data out of the event body header if it exists.
        * Issue #1658  Add ability for CRingBufferDecoder to autoselect
          the format helper if a ring format item is seen in the input data.
        * Issue #1633 Provide event processors with a post SpecTclRC.tcl
          initialization hook.
        * Much more documentation on how to build event processors etc.
        * Extract the tcl++ and exception libs so they can be centrally
          maintained.
3.4-001
	* Update AC_INIT to provide version number.
	* Add some tests to m4 and use them there instead of in
	configure.ac
	* Set up to use Jenkins CI server.
        * Only let the cppunit tests that don't need a display survive.
        * Properly integrate the V1729 FADC in VMUSB's spectclSetup.tcl
          file.
        * Fix error in vmusb spectclSetup.tcl typo on V1x90 configuration
3.4-002
	* Bug #2100 - gates on m2 spectra incorrectly convert their points.
        * Issue #2101 - Axis definitions for m2 and gd spectra are not clear.
        * Feature #2102 Want to display gates on m2 spectra.
3.4-003
	* Feature #2103 - Allow users to hide the gates on displayed spectra
          Spectra->Hide Gates and then refresh the menu is a toggle button.
        * Feature #1484 - Make work with Tcl 8.6.
	* Fix error in 11 ring format helper - was not getting the runnumber properly.